--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "css-loader": "^2.0.2",
     "eslint-plugin-react": "^7.11.1",
     "react-hot-loader": "^4.6.3",
+    "style-loader": "^0.23.1",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.13"
@@ -23,6 +25,9 @@
   "dependencies": {
     "fetch-intercept": "^2.3.1",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "whatwg-fetch": "^3.0.0"
   }
 }
