--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fetch-intercept": "^2.3.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-paginate": "^6.0.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "whatwg-fetch": "^3.0.0"
