--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^8.0.4",
     "css-loader": "^2.0.2",
     "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^3.0.1",
     "react-hot-loader": "^4.6.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.2",
