--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^2.0.2",
+    "eslint": "^5.11.0",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^3.0.1",
     "react-hot-loader": "^4.6.3",
@@ -29,6 +30,8 @@
     "react-dom": "^16.7.0",
     "react-paginate": "^6.0.0",
     "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "whatwg-fetch": "^3.0.0"
   }
