--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,16 @@
 {
   "plugins": [
     "eslint-plugin-react"
-  ]
+  ],
+  "parserOptions": {
+    "ecmaVersion": 2017,
+    "sourceType": "module"
+  },
+  "parser": "babel-eslint",
+  "env": {
+    "es6": true,
+    "node": true,
+    "browser": true
+
+  }
 }
