--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development  --host 0.0.0.0 --port 3000",
-    "test": "jest"
+    "test": "jest",
+    "eslint": "eslint **/*.js"
   },
   "keywords": [],
   "author": "Karo Hovhannisyan",
@@ -15,6 +16,7 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.0-beta.6",
     "css-loader": "^2.0.2",
     "enzyme": "^3.8.0",
